--- a/css/custom/menu.css
+++ b/css/custom/menu.css
@@ -1,35 +1,33 @@
+#hamburger {
+  font-size: 1.3em; }
+
+.tickets {
+  color: white !important;
+  background-color: black;
+  padding: 24px; }
+
+.show {
+  height: 100vh !important;
+  -webkit-transition: 0.3s ease-in;
+  -o-transition: 0.3s ease-in;
+  transition: 0.3s ease-in; }
+
 #menu {
-  padding-top: 10vh;
-  padding-bottom: 10vh; }
-  #menu ul {
-    list-style-type: none;
-    padding-left: 0px; }
-    #menu ul li {
-      font-size: 1.5em;
-      display: -webkit-box;
-      display: -ms-flexbox;
-      display: flex; }
-  #menu .noodles {
-    background-image: url(../images/padthai.jpg);
-    background-size: cover;
-    margin-bottom: 20px;
-    height: 40vh;
-    width: 100%; }
-  #menu .curry {
-    background-image: url(../images/thai.jpg);
-    background-size: cover;
-    margin-bottom: 20px;
-    height: 40vh;
-    width: 100%; }
-  #menu .rice {
-    background-image: url(../images/rice.jpg);
-    background-size: cover;
-    margin-bottom: 20px;
-    height: 40vh;
-    width: 100%; }
-  #menu .wok {
-    background-image: url(../images/wok.jpg);
-    background-size: cover;
-    margin-bottom: 20px;
-    height: 40vh;
-    width: 100%; }
+  z-index: 10;
+  background-color: white;
+  width: 100%;
+  position: fixed;
+  top: 0;
+  height: 0;
+  overflow: hidden;
+  -webkit-transition: 0.3s ease-in;
+  -o-transition: 0.3s ease-in;
+  transition: 0.3s ease-in; }
+  #menu .container-fluid i {
+    font-size: 1.3em; }
+  #menu .container-fluid a {
+    font-size: 20px;
+    color: black;
+    font-weight: 600; }
+  #menu .container-fluid .row {
+    min-height: 100vh; }
