--- a/scss/custom/font.scss
+++ b/scss/custom/font.scss
@@ -1,13 +1,26 @@
 @import url('https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,600&display=swap');
 
-
 body {
   font-family: 'Open Sans', sans-serif;
 }
-p{
-  font-family: 'Open Sans', sans-serif;
 
+p {
+  font-family: 'Open Sans', sans-serif;
+  font-size: 16px;
 }
-h2{
+
+h2 {
   font-weight: 300;
 }
+@media (min-width: 576px) {}
+// Medium devices (tablets, 768px and up)
+@media (min-width: 768px) {
+  p {
+    font-family: 'Open Sans', sans-serif;
+    font-size: 24px;
+  }
+}
+// Large devices (desktops, 992px and up)
+@media (min-width: 992px) {}
+// Extra large devices (large desktops, 1200px and up)
+@media (min-width: 1200px) {}
