--- a/scss/style.scss
+++ b/scss/style.scss
@@ -41,7 +41,14 @@
 @import "bootstrap/spinners";
 @import "bootstrap/utilities";
 @import "bootstrap/print"; // custom scss
+@import "custom/about";
+@import "custom/contact";
+@import "custom/footer";
 @import "custom/font";
+@import "custom/home";
+@import "custom/images";
+@import "custom/menu";
+
 
 * {
   padding: 0;
@@ -52,134 +59,15 @@ html {
   scroll-behavior: smooth;
 }
 
-.tickets {
-  color: white!important;
-  background-color: black;
-  padding: 24px;
-}
 
-.show {
-  height: 100vh!important;
-  transition: 0.3s ease-in;
-}
 
-#row-1 {
-  height: 20vh;
-  border-bottom: 3px solid black;
-}
 
-#row-2 {
-  height: 80vh;
-  border-bottom: 3px solid black;
-}
 
-.right-box {
-  border-left: 3px solid black;
-}
 
-#switch-title {
-  position: absolute;
-  font-size: 6em;
-  z-index: 5;
-  top: 10vh;
-}
 
-video {
-  height: 80vh;
-}
-
-#home-img-1 {
-  background-image: url("../img/image1.png");
-  background-size: cover;
-  background-position: center;
-  height: 80vh;
-}
-#home-img-2 {
-  background-image: url("../img/image2.png");
-  background-size: cover;
-  background-position: center;
-  height: 20vh;
-}
-#home-img-3 {
-  background-image: url("../img/image3.png");
-  background-size: cover;
-  background-position: center;
-  height: 40vh;
-}
-#home-img-4 {
-  background-image: url("../img/image4.png");
-  background-size: cover;
-  background-position: center;
-  height: 80vh;
-}
-#home-img-5 {
-  background-image: url("../img/image5.png");
-  background-size: cover;
-  background-position: center;
-  height: 40vh;
-}
-#home-img-6 {
-  background-image: url("../img/image6.png");
-  background-size: cover;
-  background-position: center;
-  height: 40vh;
-}
-#home-img-7 {
-  background-image: url("../img/image7.png");
-  background-size: cover;
-  background-position: center;
-  height: 40vh;
-}
-#home-img-8 {
-  background-image: url("../img/image8.png");
-  background-size: cover;
-  background-position: center;
-  height: 40vh;
-}
-#home-img-9 {
-  background-image: url("../img/image9.png");
-  background-size: cover;
-  background-position: center;
-  height: 40vh;
-}
-#home-img-10 {
-  background-image: url("../img/image10.png");
-  background-size: cover;
-  background-position: center;
-  height: 30vh;
-}
-#home-img-11 {
-  background-image: url("../img/image11.png");
-  background-size: cover;
-  background-position: center;
-  height: 30vh;
-}
-#hamburger{
-  font-size: 1.3em
-}
-#menu {
-  z-index: 10;
-  background-color: white;
-  width: 100%;
-  position: fixed;
-  top: 0;
-  height: 0;
-  overflow: hidden;
-  transition: 0.3s ease-in;
-
-  .container-fluid {
-    i {
-      font-size: 1.3em;
-    }
-
-    a {
-      font-size: 20px;
-      color: black;
-      font-weight: 600;
-    }
-
-    .row {
-      min-height: 100vh;
-    }
+footer {
+  a {
+    font-weight: 300;
+    color: black;
   }
 }
