--- a/scss/custom/about.scss
+++ b/scss/custom/about.scss
@@ -1,78 +1,48 @@
-@media (min-width: 576px) {}
+.about-img-1 {
+  background-image: url('../img/image13.png');
+  background-size: cover;
+  height: 50vh;
+}
+.about-img-2 {
+  background-image: url('../img/image14.png');
+  background-size: cover;
+  height: 50vh;
+}
+.about-img-3 {
+  background-image: url('../img/image15.png');
+  background-size: cover;
+  height: 50vh;
+}
+
+.team {
+  div {
+    overflow: hidden;
+  }
+}
+
+@media (min-width: 576px) {
+}
 // Medium devices (tablets, 768px and up)
 @media (min-width: 768px) {
-  #event-title {
-    font-size: 96px;
-    font-weight: 300;
+  .about-img-1 {
+    background-image: url('../img/image13.png');
+    background-size: cover;
+    height: 90vh;
   }
-
-  #event-description {
-    font-size: 36px;
+  .about-img-2 {
+    background-image: url('../img/image14.png');
+    background-size: cover;
+    height: 90vh;
   }
-
-  .event-part-1 {
-    font-size:24px;
-  }
-  #event-part-2{
-  font-size: 24px;
-  padding-bottom:100px;
-  }
-  #impact{
-    font-weight: 300;
-    font-size: 72px;
-  }
-  #impact-description{
-    font-size: 24px;
-  }
-.title{
-  font-size:96px;
-  font-weight: 300;
-
-}
-.sub-title{
-  font-size:72px;
-  font-weight: 300;
-
-}
-  #why-1 {
-    font-size: 36px;
-  }
-
-  #why-2 {
-    font-size: 18px;
-  }
-
-  #when {
-    font-size: 96px;
-    font-weight: 300;
-  }
-
-  .date {
-    font-size: 64px;
-    font-weight: 300;
-  }
-
-  .time {
-    font-size: 48px;
-    font-weight: 400;
-    padding-bottom: 110px;
-  }
-
-  #where {
-    font-size: 96px;
-    font-weight: 300;
-  }
-
-  #where-1 {
-    font-size: 36px;
-  }
-
-  #where-2 {
-    font-size: 24px;
-    padding-bottom: 180px;
+  .about-img-3 {
+    background-image: url('../img/image15.png');
+    background-size: cover;
+    height: 90vh;
   }
 }
 // Large devices (desktops, 992px and up)
-@media (min-width: 992px) {}
+@media (min-width: 992px) {
+}
 // Extra large devices (large desktops, 1200px and up)
-@media (min-width: 1200px) {}
+@media (min-width: 1200px) {
+}
