--- a/scss/custom/contact.scss
+++ b/scss/custom/contact.scss
@@ -1,19 +1,19 @@
-input[type=submit] {
-  font-weight: 600;
+input[type='submit'] {
+	font-weight: 600;
 }
 
 input {
-  border: none;
-  border-bottom: 1px solid #ccc;
-  color: black;
-  width: 100%;
-  padding: 8px;
+	border: none;
+	border-bottom: 1px solid #ccc;
+	color: black;
+	width: 100%;
+	padding: 8px;
 }
 
 textarea {
-  border: none;
-  border-bottom: 1px solid #ccc;
-  color: black;
-  width: 100%;
-  padding: 8px;
+	border: none;
+	border-bottom: 1px solid #ccc;
+	color: black;
+	width: 100%;
+	padding: 8px;
 }
