--- a/scss/custom/font.scss
+++ b/scss/custom/font.scss
@@ -6,13 +6,14 @@ body {
 
 p {
   font-family: 'Open Sans', sans-serif;
-  font-size: 16px;
+  font-size: 18px;
 }
 
 h2 {
   font-weight: 300;
 }
-@media (min-width: 576px) {}
+@media (min-width: 576px) {
+}
 // Medium devices (tablets, 768px and up)
 @media (min-width: 768px) {
   p {
@@ -21,6 +22,8 @@ h2 {
   }
 }
 // Large devices (desktops, 992px and up)
-@media (min-width: 992px) {}
+@media (min-width: 992px) {
+}
 // Extra large devices (large desktops, 1200px and up)
-@media (min-width: 1200px) {}
+@media (min-width: 1200px) {
+}
