--- a/scss/custom/images.scss
+++ b/scss/custom/images.scss
@@ -1,174 +1,177 @@
 #home-img-1 {
-  background-image: url("../img/image1.png");
+  background-image: url('../img/image1.png');
   background-size: cover;
   background-position: center;
   min-height: 80vh;
 }
 
 #home-img-2 {
-  background-image: url("../img/image2.png");
+  background-image: url('../img/image2.png');
   background-size: cover;
   background-position: center;
   min-height: 20vh;
 }
 
 #home-img-3 {
-  background-image: url("../img/image3.png");
+  background-image: url('../img/image3.png');
   background-size: cover;
   background-position: center;
   min-height: 70vh;
 }
 
 #home-img-4 {
-  background-image: url("../img/image4.png");
+  background-image: url('../img/image4.png');
   background-size: cover;
   background-position: center;
   min-height: 40vh;
 }
 
 #home-img-5 {
-  background-image: url("../img/image5.png");
+  background-image: url('../img/image5.png');
   background-size: cover;
   background-position: center;
   min-height: 40vh;
 }
 
 #home-img-6 {
-  background-image: url("../img/image6.png");
+  background-image: url('../img/image6.png');
   background-size: cover;
   background-position: center;
   min-height: 40vh;
 }
 
 #home-img-7 {
-  background-image: url("../img/image7.png");
+  background-image: url('../img/image7.png');
   background-size: cover;
   background-position: center;
   min-height: 40vh;
 }
 
 #home-img-8 {
-  background-image: url("../img/image8.png");
+  background-image: url('../img/image8.png');
   background-size: cover;
   background-position: center;
   min-height: 40vh;
 }
 
 #home-img-9 {
-  background-image: url("../img/image9.png");
+  background-image: url('../img/image9.png');
   background-size: cover;
   background-position: center;
   min-height: 40vh;
 }
 
 #home-img-10 {
-  background-image: url("../img/image10.png");
+  background-image: url('../img/image10.png');
   background-size: cover;
   background-position: center;
   min-height: 30vh;
 }
 
 #home-img-11 {
-  background-image: url("../img/image11.png");
+  background-image: url('../img/image11.png');
   background-size: cover;
   background-position: center;
   min-height: 30vh;
 }
 
 #home-img-12 {
-  background-image: url("../img/image12.png");
+  background-image: url('../img/image12.png');
   background-size: cover;
   background-position: center;
   min-height: 30vh;
 }
-@media (min-width: 576px) {}
+@media (min-width: 576px) {
+}
 // Medium devices (tablets, 768px and up)
 @media (min-width: 768px) {
   #home-img-1 {
-    background-image: url("../img/image1.png");
+    background-image: url('../img/image1.png');
     background-size: cover;
     background-position: center;
     min-height: 80vh;
   }
 
   #home-img-2 {
-    background-image: url("../img/image2.png");
+    background-image: url('../img/image2.png');
     background-size: cover;
     background-position: center;
-    min-height: 20vh;
+    min-height: 50vh;
   }
 
   #home-img-3 {
-    background-image: url("../img/image3.png");
+    background-image: url('../img/image3.png');
     background-size: cover;
     background-position: center;
     min-height: 70vh;
   }
 
   #home-img-4 {
-    background-image: url("../img/image4.png");
+    background-image: url('../img/image4.png');
     background-size: cover;
     background-position: center;
     min-height: 80vh;
   }
 
   #home-img-5 {
-    background-image: url("../img/image5.png");
+    background-image: url('../img/image5.png');
     background-size: cover;
     background-position: center;
     min-height: 40vh;
   }
 
   #home-img-6 {
-    background-image: url("../img/image6.png");
+    background-image: url('../img/image6.png');
     background-size: cover;
     background-position: center;
-    min-height: 40vh;
+    min-height: 60vh;
   }
 
   #home-img-7 {
-    background-image: url("../img/image7.png");
+    background-image: url('../img/image7.png');
     background-size: cover;
     background-position: center;
     min-height: 40vh;
   }
 
   #home-img-8 {
-    background-image: url("../img/image8.png");
+    background-image: url('../img/image8.png');
     background-size: cover;
     background-position: center;
     min-height: 40vh;
   }
 
   #home-img-9 {
-    background-image: url("../img/image9.png");
+    background-image: url('../img/image9.png');
     background-size: cover;
     background-position: center;
     min-height: 40vh;
   }
 
   #home-img-10 {
-    background-image: url("../img/image10.png");
+    background-image: url('../img/image10.png');
     background-size: cover;
     background-position: center;
-    min-height: 30vh;
+    min-height: 70vh;
   }
 
   #home-img-11 {
-    background-image: url("../img/image11.png");
+    background-image: url('../img/image11.png');
     background-size: cover;
     background-position: center;
-    min-height: 30vh;
+    min-height: 50vh;
   }
 
   #home-img-12 {
-    background-image: url("../img/image12.png");
+    background-image: url('../img/image12.png');
     background-size: cover;
     background-position: center;
     min-height: 30vh;
   }
 }
 // Large devices (desktops, 992px and up)
-@media (min-width: 992px) {}
+@media (min-width: 992px) {
+}
 // Extra large devices (large desktops, 1200px and up)
-@media (min-width: 1200px) {}
+@media (min-width: 1200px) {
+}
